--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   },
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "mongoose": "^8.13.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
   }
-} 
+}
