--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-handlebars": "^8.0.2",
     "express-session": "^1.18.1",
     "express-validator": "^7.0.1",
+    "marked": "^15.0.11",
     "mongoose": "^8.14.0",
     "nodemailer": "^6.9.13",
     "passport": "^0.7.0",
